--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -8,7 +8,7 @@
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #{$klein-blue-color};
-  --global-hover-color: #{$klein-blue-color};
+  --global-hover-color: #{$orange-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$white-color};
   --global-footer-text-color: #{$white-color};
@@ -76,7 +76,7 @@ html[data-theme="dark"] {
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color};
   --global-theme-color: #{$klein-blue-color};
-  --global-hover-color: #{$klein-blue-color};
+  --global-hover-color: #{$orange-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$black-color};
   --global-footer-text-color: #{$black-color};
@@ -86,7 +86,7 @@ html[data-theme="dark"] {
   // --global-footer-link-color: #{$black-color};
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #424246;
-  --global-card-bg-color: #{$grey-900};
+  --global-card-bg-color: rgb(0, 0, 0);
   --global-back-to-top-bg-color: rgba(#{red($white-color)}, #{green($white-color)}, #{blue($white-color)}, 0.5);
   --global-back-to-top-text-color: #{$black-color};
   --global-newsletter-bg-color: #{$grey-color-light};
