--- a/_includes/projects.liquid
+++ b/_includes/projects.liquid
@@ -12,7 +12,8 @@
         %}
       {% endif %}
       <div class="card-body">
-        <!-- Removed the project title and description -->
+        <h2 class="card-title">{{ project.title }}</h2>
+        <p class="card-text">{{ project.description }}</p>
         <div class="row ml-1 mr-1 p-0">
           {% if project.github %}
             <div class="github-icon">
