--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -167,11 +167,14 @@ ul.task-list input[type="checkbox"] {
   }
 
   .card-title {
-    color: var(--global-text-color);
+    color: rgba(255, 255, 255, 0.6);
+    text-align: right; /* 确保文字右对齐 */
+    font-size: 1.5rem;
+    font-family: 'OpenSansCondensedBold', sans-serif; /* 应用自定义字体 */
   }
 
   .card-body {
-    padding: 1.25rem 1.25rem 1.25rem 1.25rem;
+    padding: 0 1.25rem 1.25rem 1.25rem;
   }
 }
 
@@ -281,9 +284,13 @@ ul.task-list input[type="checkbox"] {
 
   .navbar-nav .nav-item .nav-link {
     color: var(--global-text-color);
+    font-size: 1.3rem;
+    padding-bottom: 0;
+    padding-top: 0;
 
     &:hover {
       color: var(--global-hover-color);
+      font-size: 1.5rem;
     }
   }
 
@@ -615,7 +622,7 @@ footer.sticky-bottom {
 
     &:hover {
       .card-title {
-        color: var(--global-theme-color);
+        color: var(--global-hover-color);
       }
     }
   }
@@ -1068,7 +1075,7 @@ nav[data-toggle="toc"] {
       color: var(--global-theme-color);
 
       .card-title {
-        color: var(--global-theme-color);
+        color: var(--global-hover-color);
       }
     }
   }
@@ -1326,4 +1333,21 @@ ninja-keys::part(ninja-input-wrapper) {
 .project-links a:hover {
   color: $klein-blue-color;
   text-decoration: underline; /* 根据需要添加 */
+}
+
+/* Customize the scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #000000; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(153, 153, 153, 0.2); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 47, 147, 0.8); 
 }
